# text2manim

./: .dockerignore  .editorconfig  .gitignore  .gitmessage  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.combined  Dockerfile.combined.dev  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  release-please-config.json  text2manim.code-workspace
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  publish.yml  publish_docker_image.yml  release-please.yml
api/: .env.example  Dockerfile  Dockerfile.gateway  Dockerfile.grpc  Dockerfile.grpc.dev  go.mod  go.sum
api/cmd/gateway/: main.go
api/cmd/server/: main.go
api/config/: config.yaml
api/docs/openapi/text2manim/v1/: client.swagger.json  worker.swagger.json
api/internal/config/: config.go
api/internal/domain/: generation.go  service.go  video.go
api/internal/domain/ent/: client.go  ent.go  generation.go  generation_create.go  generation_delete.go  generation_query.go  generation_update.go  mutation.go  runtime.go  tx.go
api/internal/domain/ent/enttest/: enttest.go
api/internal/domain/ent/generation/: generation.go  where.go
api/internal/domain/ent/hook/: hook.go
api/internal/domain/ent/migrate/: schema.go
api/internal/domain/ent/predicate/: predicate.go
api/internal/domain/ent/runtime/: runtime.go
api/internal/domain/ent/schema/: generation.go
api/internal/domain/mapper/: generation_mapper.go
api/internal/infrastructure/grpc/handler/: handler.go
api/internal/infrastructure/repository/: factory.go  memory_video_repository.go  postgres_video_repository.go
api/internal/infrastructure/worker/: grpc_worker_client.go
api/internal/interface/repository/: video_repository.go
api/internal/interface/worker/: worker_client.go
api/internal/middleware/: auth.go
api/internal/usecase/: video_generator.go
api/pkg/pb/text2manim/v1/: client.pb.go  client.pb.gw.go  client_grpc.pb.go  worker.pb.go  worker_grpc.pb.go
docs/: DESIGN.md
model/: .env.example  .gitignore  README.md  pyproject.toml
model/data/: models.json  sample_prompts.json
model/data/experiments/code-llama/: prompt.txt
model/src/data/scripts/datacollection/: data_collection.py
model/src/experiments/base-models/: main.py
model/src/experiments/code-llama/: practice.py
model/src/experiments/current/base-models/code-llama/: main.py
model/src/model/: __init__.py
model/src/model/data/scripts/: data_collection.py
model/src/model/data/scripts/datacollection/: basic.py  data_collection.py
model/src/model/data/scripts/preprocess/: main.py  prompt.txt
proto/: buf.gen.yaml
proto/text2manim/v1/: client.proto  worker.proto
src/text2manim/: __init__.py  cli.py  config.py  errors.py  events.py  generate.py
src/text2manim/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_compat.py
src/text2manim/pipeline/: __init__.py  extract.py  prompts.py  runner.py  validate.py
src/text2manim/sandbox/: __init__.py  base.py  common.py  docker.py  factory.py  local.py
src/text2manim/server/: __init__.py  app.py  event_codec.py  schemas.py  store.py  worker.py
tests/: test_e2e.py  test_extract.py  test_runner.py  test_server.py  test_validate.py
worker/: .env.example  Dockerfile  README.md  pyproject.toml
worker/src/: config.py  main.py
worker/src/models/: text2manim_model.py
worker/src/storage/: local_storage.py  storage_manager.py
worker/src/storage/cloud_storage/: gcp.py
worker/src/utils/: logger.py
worker/src/worker/: worker.py
worker/tests/: test_text2manim_model.py
