[project]
name = "text2manim"
version = "0.1.0"
description = "テキストからManim動画を生成するエンジン。CLI・ライブラリ・サーバーモードを提供する"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kinji Kawaguchi" }]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.60",
]

[project.scripts]
text2manim = "text2manim.cli:main"

[dependency-groups]
dev = [
    "pyrefly>=1.1",
    "pytest>=8.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyrefly]
preset = "all"
python-version = "3.14"
project-includes = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # 相互排他ルールの片側（D211/D212を採用）
    "D203",
    "D213",
    # ruff formatter併用時に非推奨とされるルール
    "COM812",
    "ISC001",
    # docstringは日本語で書くため、末尾の「。」がピリオドと認識されない
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
"src/text2manim/cli.py" = [
    "T201", # 標準出力への表示はCLIの本来のインターフェース
]
"tests/**" = [
    "S101",    # pytestはassertを使う
    "PLR2004", # テストの期待値はマジックナンバーを許容
    "INP001",  # テストディレクトリはパッケージにしない慣例
]

[tool.pytest.ini_options]
testpaths = ["tests"]
