[project]
name = "text2manim"
dynamic = ["version"]
description = "テキストからManim動画を生成するエンジン。CLI・ライブラリ・サーバーモードを提供する"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kinji Kawaguchi" }]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.139.0",
    "openai>=1.60",
    "uvicorn>=0.51.0",
]

[project.scripts]
text2manim = "text2manim.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "import-linter>=2.13",
    "minport>=0.3.1",
    "pip-licenses>=5.5.5",
    "pre-commit>=4.6.0",
    "pyrefly>=1.1",
    "pytest>=8.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# バージョンの単一の源泉は __init__.py (release-pleaseが更新する)。
# pyprojectを静的versionにするとuv.lockにも固定され、リリースPRのバージョン
# バンプだけで uv sync --locked が壊れるため動的にしている。
[tool.hatch.version]
path = "src/text2manim/__init__.py"

[tool.minport]
src = ["src"]

[tool.importlinter]
root_package = "text2manim"

# 上の層は下の層に依存できるが、逆方向と同一層内の相互依存を禁止する
[[tool.importlinter.contracts]]
name = "レイヤー構造"
type = "layers"
layers = [
    "text2manim.cli",
    "text2manim.server",
    "text2manim.generate",
    "text2manim.pipeline",
    "text2manim.llm | text2manim.sandbox",
    "text2manim.events | text2manim.errors | text2manim.config",
]

[tool.pyrefly]
preset = "all"
python-version = "3.14"
project-includes = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # 相互排他ルールの片側（D211/D212を採用）
    "D203",
    "D213",
    # ruff formatter併用時に非推奨とされるルール
    "COM812",
    "ISC001",
    # docstringは日本語で書くため、末尾の「。」がピリオドと認識されない
    "D400",
    "D415",
]

[tool.ruff.lint.flake8-type-checking]
# Pydanticモデルはアノテーションを実行時に評価するためTYPE_CHECKINGへ移動しない
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"src/text2manim/cli.py" = [
    "T201", # 標準出力への表示はCLIの本来のインターフェース
]
"tests/**" = [
    "S101",    # pytestはassertを使う
    "PLR2004", # テストの期待値はマジックナンバーを許容
    "INP001",  # テストディレクトリはパッケージにしない慣例
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# e2eは実LLM・Dockerを使いコストがかかるため既定では除外する (uv run pytest -m e2e で実行)
addopts = "-m 'not e2e'"
markers = [
    "e2e: 実LLMとDockerサンドボックスを使う端到端テスト",
]
